syntax = "proto3";
option java_multiple_files = true;
package com.tsemkalo.businesscards;
import "google/protobuf/empty.proto";


message AddSupporterRequestProtoList {
  repeated AddSupporterRequestProto requests = 1;
}

message AddSupporterRequestProto {
  int64 id = 1;
  string username = 2;
}

message ErrorMessageProtoList {
  repeated ErrorMessageProto errorProtos = 1;
}

message ErrorMessageProto {
  int64 id = 1;
  int32 code = 2;
  string reason = 3;
}

message AddSupporterReplyProto {
  string username = 1;
}

service AdminService {
  rpc getAddSupporterRequests(google.protobuf.Empty) returns (AddSupporterRequestProtoList);
  rpc gerErrorMessages(google.protobuf.Empty) returns (ErrorMessageProtoList);
  rpc deleteAddTechSupportRequest(AddSupporterReplyProto) returns (google.protobuf.Empty);
}