syntax = "proto3";
option java_multiple_files = true;
package com.tsemkalo.businesscards;
import "google/protobuf/empty.proto";

message CardListProto {
  repeated CardProto cards = 1;
}

message CardProto {
  int64 id = 1;
  int64 userId = 2;
  string title = 3;
  string logoImgPath = 4;
  string headline = 5;
  string description = 6;
  repeated GalleryPhotoProto photos = 7;
  repeated ContactProto contacts = 8;
  repeated AddressProto addresses = 9;
  int32 followersAmount = 10;
  int32 likesAmount = 11;
  AppearanceProto appearance = 12;
}

//message FullCardInfo {
//  CardProto cardProto = 1;
//  repeated GalleryPhotoProto photos = 2;
//  repeated ContactProto contacts = 3;
//  repeated AddressProto addresses = 4;
//  int32 followersAmount = 5;
//  int32 likesAmount = 6;
//  AppearanceProto appearance = 7;
//}

message AddressProto {
  int64 id = 1;
  string address = 2;
  bool showOnMap = 3;
  int64 cardId = 4;
}

message ContactProto {
  int64 id = 1;
  ProtoContactType type = 2;
  string content = 3;
  int64 cardId = 4;
}

message GalleryPhotoProto {
  int64 id = 1;
  int64 cardId = 2;
  string imgPath = 3;
}

message FollowProto {
  int64 id = 1;
  int64 userId = 2;
  int64 cardId = 3;
}

message LikeProto {
  int64 id = 1;
  int64 userId = 2;
  int64 cardId = 3;
}

message IdValue {
  int64 id = 1;
}

message AppearanceProto {
  int64 id = 1;
  int64 cardId = 2;
  string fontName = 3;
  string backgroundColor = 4;
  string backgroundImagePath = 5;
  ProtoPictureStretchingType pictureStretching = 6;
  string mainColor = 7;
  string secondColor = 8;
  ProtoGalleryType galleryType = 9;
}

message EditCardProto {
  CardProto cardProto = 1;
  int64 currentUserId = 2;
  bool admin = 3;
}

message DeleteCardProto {
  int64 cardId = 1;
  int64 currentUserId = 2;
  bool admin = 3;
}

message EditAddressProto {
  AddressProto addressProto = 1;
  int64 currentUserId = 2;
  bool admin = 3;
  int64 cardId = 4;
}

message DeleteAddressProto {
  int64 addressId = 1;
  int64 currentUserId = 2;
  bool admin = 3;
  int64 cardId = 4;
}

message EditContactProto {
  ContactProto contactProto = 1;
  int64 currentUserId = 2;
  bool admin = 3;
  int64 cardId = 4;
}

message DeleteContactProto {
  int64 contactId = 1;
  int64 currentUserId = 2;
  bool admin = 3;
  int64 cardId = 4;
}

message EditAppearanceProto {
  AppearanceProto appearanceProto = 1;
  int64 currentUserId = 2;
  bool admin = 3;
  int64 cardId = 4;
}

message EditGalleryPhotoProto {
  GalleryPhotoProto galleryPhotoProto = 1;
  int64 currentUserId = 2;
  bool admin = 3;
  int64 cardId = 4;
}

message DeleteGalleryPhotoProto {
  int64 galleryPhotoId = 1;
  int64 currentUserId = 2;
  bool admin = 3;
  int64 cardId = 4;
}

enum ProtoContactType {
  SOCIAL_NETWORK = 0;
  PHONE_NUMBER = 1;
  MAIL_ADDRESS = 2;
  WEB_SITE = 3;
}

enum ProtoPictureStretchingType {
  FULL_SCREEN = 0;
  FULL_DOCUMENT = 1;
  WIDTH_STRETCH_REPEAT_BY_HEIGHT = 2;
  FULL_DOCUMENT_STRETCH = 3;
  SCREEN_CENTER = 4;
  DOCUMENT_CENTER = 5;
  REPEAT = 6;
}

enum ProtoGalleryType {
    COLLAGE = 0;
    GRID = 1;
    CAROUSEL = 2;
}

service CardService {
  rpc addCard(EditCardProto) returns (IdValue);
  rpc editCard(EditCardProto) returns (google.protobuf.Empty);
  rpc deleteCard(DeleteCardProto) returns (google.protobuf.Empty);
  rpc getCardInfoById(IdValue) returns (CardProto);
  rpc getAllCardsInfoByUser(IdValue) returns (CardListProto);
  rpc addAddress(EditAddressProto) returns (google.protobuf.Empty);
  rpc deleteAddress(DeleteAddressProto) returns (google.protobuf.Empty);
  rpc editAddress(EditAddressProto) returns (google.protobuf.Empty);
  rpc addContact(EditContactProto) returns (google.protobuf.Empty);
  rpc deleteContact(DeleteContactProto) returns (google.protobuf.Empty);
  rpc editContact(EditContactProto) returns (google.protobuf.Empty);
  rpc addGalleryPhoto(EditGalleryPhotoProto) returns (google.protobuf.Empty);
  rpc editGalleryPhoto(EditGalleryPhotoProto) returns (google.protobuf.Empty);
  rpc deleteGalleryPhoto(DeleteGalleryPhotoProto) returns (google.protobuf.Empty);
  rpc addFollow(FollowProto) returns (google.protobuf.Empty);
  rpc deleteFollow(FollowProto) returns (google.protobuf.Empty);
  rpc addLike(LikeProto) returns (google.protobuf.Empty);
  rpc deleteLike(LikeProto) returns (google.protobuf.Empty);
  rpc editAppearance(EditAppearanceProto) returns (google.protobuf.Empty);
}