package com.tsemkalo.businesscards.configuration.constants;

public class GRPCServiceNames {
    public final static String UserService = "grpc-user-service";
    public final static String CardService = "grpc-card-service";
    public final static String MessageService = "grpc-message-service";
    public final static String AdminService = "grpc-admin-service";
}
